--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
     padding: 0px;
     margin: 0px;
-    background-color: rgb(209, 213, 231);
+    background-color: hsl(229, 31%, 86%);
 }
 
 /* nav section */
@@ -136,10 +136,75 @@ a {
     font-family: 'Times New Roman', Times, serif;
     margin-bottom: 0px;
 }
+.div-3{
+    display: flex;
+    justify-content: center;
+    gap: 90px;
+    text-align: center;
+}
 
-.div-3 .haa{
-    font-size: 65px;
+.section2{
+    background-color: rgb(183, 199, 242);
+    margin: 0 200px;
+    padding: 50px 250px;
+    margin-bottom: 50px;
+    border-radius: 30px;
+    height: 300px;
+}
+
+.sec-heading2{
+    font-size: 38px;
     font-weight: bold;
-    color: rgb(110, 110, 240);
+    font-family: 'Times New Roman', Times, serif;
     margin-bottom: 0px;
 }
+
+.div-3 .haa{
+    font-size: 70px;
+    font-weight: bold;
+    color: blue;
+    margin-bottom: 0px;
+}
+
+.div-3 .p222{
+    font-size: 20px;
+    color: rgb(72, 77, 82);
+}
+
+.section-head3{
+    text-align: center;
+}
+
+.section-all{
+    width: 300px;
+    background-color: rgb(255, 255, 255);
+    padding: 50px;
+    border-radius: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 50px;
+    box-shadow: 0px 1px 1px 1px   rgb(237, 231, 231);
+}
+
+.reviewer{
+    display: flex;
+    gap: 20px;
+}
+
+.img3{
+    width: 60px;
+    border-radius: 200px;
+}
+
+.section3{
+    display: flex;
+    justify-content: center;
+}
+
+.section-head3{
+    font-size: 49px;
+    margin-top: 150px;
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
